[package]
name = "random-element"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
description = "simple cli to pick random elements random numbers"
license = "MIT"
repository = "https://github.com/nilsmartel/randomf"
authors = ["Nils Steffen Martel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"              # Random number generators and other randomness functionality.
